--- a/src/pages/Perform/style.css
+++ b/src/pages/Perform/style.css
@@ -87,6 +87,7 @@
 }
 
 .perform__grid__row {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -94,6 +95,8 @@
 
 .perform__grid__row > *:nth-child(2) {
     flex-grow: 1;
+    overflow: auto;
+    max-width: 100%;
 }
 
 .perform__grid__row::before {
@@ -198,11 +201,18 @@ textarea.perform__grid__notes {
 }
 
 .perform__grid__sound-effects {
-    display: flex;
+    /*display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     padding: 0 20px;
-    gap: 20px;
+    gap: 20px;*/
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-gap: 40px;
+    padding: 40px;
 }
 
 .perform__grid__changed {
