--- a/src/components/AudioFaderComponent/style.css
+++ b/src/components/AudioFaderComponent/style.css
@@ -80,9 +80,31 @@
 .fader {
     width: 25px;
     height: 60px;
-    background: linear-gradient(to bottom, #0e0e0e 0%, #4f4f4f 5%, #4f4f4f 5%, #4f4f4f 10%, #0e0e0e 25%, #161616 34%, #161616 34%, #4f4f4f 73%, #4f4f4f 75%, #0e0e0e 100%);
+    background: linear-gradient(to bottom,
+    #0e0e0e 0%,
+    #4f4f4f 5%,
+    #4f4f4f 5%,
+    #4f4f4f 10%,
+    #0e0e0e 25%,
+    #161616 34%,
+    #161616 48%,
+    #ffffff 50%,
+    #161616 52%,
+    #4f4f4f 73%,
+    #4f4f4f 75%,
+    #0e0e0e 100%);
     z-index: 10;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.5);
+}
+
+.fader::after {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 2px;
+    color: #fff;
 }
 
 .vca {
